terraform/modules/subnet/public-subnet.tf
resource "aws_subnet" "main-subnet" {
  vpc_id = var.vpc_id
  cidr_block = "10.0.0.0/24"
  availability_zone = var.main-az
}

resource "aws_subnet" "secondary-subnet" {
  vpc_id = var.vpc_id
  cidr_block = "10.0.1.0/24"
  availability_zone = var.sec-az
}
